# HamSandwich

./: .appveyor.yml  .editorconfig  .gitattributes  .gitignore  .mailmap  CMakeLists.txt  CMakePresets.json  Containerfile  Dockerfile  LICENSE.md  Makefile  Makefile.2  Makefile.old  Makefile2.mk  README.md  SConstruct  Supreme.files  Supreme.includes  Vagrantfile  android  container  dependencies.sh  gradlew  index.html  premake5.lua  rescomp.py  run  run.old  run2  settings.gradle
source/: CMakeLists.txt  PixelToaster.cpp  arcade.cpp  arcade.h  asm.h  bullet.cpp  bullet.h  chat.cpp  cheat.cpp  clock.cpp  clock.h  comicbook.cpp  control.cpp  control.h  control2.cpp  control2.h  cossin.cpp  cossin.h  credits.inl  customworld.cpp  customworld.h  display.cpp  display.h  edithelp.cpp  edithelp.h  editor.cpp  editor.h  filedialog.cpp  filedialog.h  fishing.cpp  fontawesome.h  gallery.cpp  game.cpp  game.h  globals.h  goal.cpp  goal.h  gui.cpp  gui.h  guy.cpp  (+117 more)
source/aegea/: CMakeLists.txt
source/amazin/: CMakeLists.txt  amazin.json  cheat.cpp  cheat.h  config.cpp  config.h  display.cpp  display.h  editor.cpp  editor.h  game.cpp  game.h  guy.cpp  guy.h  help.cpp  help.h  highscore.cpp  highscore.h  loop.cpp  loop.h  main.cpp  map.cpp  map.h  options.cpp  options.h  particle.cpp  particle.h  pause.cpp  pause.h  player.cpp  player.h  register.h  sound.cpp  sound.h  status.cpp  status.h  timeattack.cpp  timeattack.h  title.cpp  title.h
source/asm/: jamulspr_drawcolor_vs.h  jamulspr_drawghost_vs.h  jamulspr_drawoffcolor_vs.h  jamulspr_drawshadow_vs.h  tile_renderfloortile_vs.h  tile_renderfloortiletrans_vs.h
source/common/: lsdir.cpp  lsdir.h
source/eddie/: CMakeLists.txt  Copy of guy.cpp  backgd.cpp  backgd.h  control.cpp  control.h  credits.cpp  credits.h  display.cpp  display.h  eddie.json  game.cpp  game.h  guy.cpp  guy.h  icon.rc  intro.cpp  intro.h  jamulfont.cpp  jamulfont.h  jamulsound.cpp  jamulsound.h  jamulspr.cpp  jamulspr.h  jamultypes.h  level.cpp  level.h  main.cpp  mgldraw.cpp  mgldraw.h  mission.cpp  mission.h  music.cpp  music.h  nag.cpp  nag.h  options.cpp  options.h  particle.cpp  particle.h  (+14 more)
source/ham/: CMakeLists.txt  appdata.cpp  appdata.h  appdata_jni.inc  audiofx.cpp  audiofx.h  bitflags.h  clock.cpp  clock.h  control.cpp  control.h  coro.cpp  coro.h  coro_active.inc.h  erase_if.h  extern.cpp  extern.h  ham_mgldraw.cpp  ham_mgldraw.h  hammusic.cpp  hammusic.h  hamtypes.h  hamworld.cpp  hamworld.h  ico.cpp  ico.h  ioext.cpp  ioext.h  jamulfmv.cpp  jamulfmv.h  jamulfont.cpp  jamulfont.h  jamulsound.cpp  jamulsound.h  jamulspr.cpp  jamulspr.h  jamultypes.h  leakcheck.cpp  leakcheck.h  log.cpp  (+23 more)
source/jfttool/: CMakeLists.txt  main.cpp  palette.cpp  palette.h
source/jspedit/: .gitignore  CMakeLists.txt  editor.cpp  editor.h  fontawesome.h  globals.h  gui.cpp  gui.h  jspfile.cpp  main.cpp
source/jspedit_aseprite/: .gitignore  LICENSE.md  README.md  jspedit.lua  package.json  palette.aseprite  plugin.lua
source/launcher/: CMakeLists.txt  main.cpp  sha256.cpp  sha256.h
source/libextract/: common.cpp  common.h  inno.cpp  inno.h  lzma_helpers.cpp  lzma_helpers.h  main.cpp  nsis.cpp  nsis.h  vec_rw.cpp  vec_rw.h
source/loonyland/: CMakeLists.txt  badge.cpp  badge.h  bossbash.cpp  bossbash.h  bowling.cpp  bowling.h  bullet.cpp  bullet.h  ch_bonkula.cpp  ch_bonkula.h  ch_girl.cpp  ch_girl.h  ch_loony.cpp  ch_loony.h  ch_summon.cpp  ch_summon.h  ch_swampdog.cpp  ch_swampdog.h  ch_toad.cpp  ch_toad.h  ch_witch.cpp  ch_witch.h  ch_wolf.cpp  ch_wolf.h  cheat.cpp  clock.cpp  clock.h  control.cpp  control.h  cossin.cpp  debuggo.cpp  debuggo.h  display.cpp  display.h  editor.cpp  editor.h  endgame.cpp  endgame.h  filedialog.cpp  (+78 more)
source/loonyland2/: CMakeLists.txt  achieve.cpp  achieve.h  alchemy.cpp  alchemy.h  allusionary.cpp  allusionary.h  arena.cpp  arena.h  bullet.cpp  bullet.h  ch_loony.cpp  ch_loony.h  cheat.cpp  cheat.h  clock.h  config.cpp  control.cpp  control.h  cossin.cpp  cossin.h  credits.cpp  credits.h  debuggo.cpp  debuggo.h  display.cpp  display.h  editor.cpp  editor.h  equip.cpp  equip.h  filedialog.cpp  filedialog.h  gallery.cpp  gallery.h  game.cpp  game.h  glasses.cpp  glasses.h  guy.cpp  (+79 more)
source/lunatic/: CMakeLists.txt  appdata.cpp  appdata.h  bullet.cpp  bullet.h  cheat.cpp  clock.cpp  control.cpp  control.h  cossin.cpp  cossin.h  display.cpp  display.h  editor.cpp  editor.h  filedialog.cpp  filedialog.h  game.cpp  game.h  guy.cpp  guy.h  intface.cpp  intface.h  items.cpp  jamulfmv.cpp  jamulfmv.h  jamulfont.cpp  jamulfont.h  jamulsound.cpp  jamulsound.h  jamulspr.cpp  jamultypes.h  license.txt  lunatic.json  main.cpp  map.cpp  map.h  mapdialog.cpp  mapdialog.h  message.cpp  (+29 more)
source/lunaticpal/: CMakeLists.txt  lunaticpal.cpp  lunaticpal.h  lunaticpal.main.cpp  lunaticpal_values.inl  main.cpp  precompute.main.cpp
source/mini_xxd/: CMakeLists.txt  main.cpp
source/mystic/: CMakeLists.txt  Copy of title.cpp  achieves.cpp  achieves.h  archipelago.cpp  archipelago.h  bullet.cpp  bullet.h  challenge.cpp  challenge.h  cheat.cpp  clock.h  control.cpp  control.h  cossin.h  display.cpp  display.h  editor.cpp  editor.h  fairy.cpp  fairy.h  filedialog.cpp  game.cpp  game.h  guy.cpp  guy.h  intface.cpp  intface.h  items.cpp  items.h  jamulfmv.cpp  jamulfmv.h  jamulfont.cpp  jamulfont.h  jamulsound.cpp  jamulsound.h  jamulsound2.cpp  jamulspr.cpp  jamulspr.h  main.cpp  (+51 more)
source/old/: jamulspr_supreme.cpp  mgldraw2.cpp
source/sleepless/: CMakeLists.txt  archipelago.cpp  archipelago.h  archipelago_data.inl  bullet.cpp  bullet.h  cheat.cpp  cheat.h  comicbook.cpp  comicbook.h  config.cpp  control.cpp  cossin.cpp  customworld.cpp  customworld.h  dialogbits.cpp  dialogbits.h  display.cpp  display.h  editor.cpp  filedialog.cpp  filedialog.h  fishing.cpp  fishing.h  gallery.cpp  gallery.h  game.cpp  game.h  goal.cpp  goal.h  guy.cpp  guy.h  internet.cpp  intface.cpp  intface.h  itemedit.cpp  items.cpp  items.h  jamulfont.cpp  jamulfont.h  (+103 more)
tools/: CMakeLists.txt  fixasm.py  lines.py  lsan_suppressions.txt  make.py  merge.xlsx  release  requirements.txt
(+652 files in other folders)
